// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Plural' 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Earth + Water = Plant
Engine + Plant = Car
Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Detective' 2`] = `
"Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Earth + Earth = Mountain
Mountain + Sand = Pyramid
Lens + Pyramid = Eye
Earth + Wind = Dust
Dust + Earth = Planet
Fire + Planet = Sun
Sun + Wind = Sunflower
Fire + Wind = Smoke
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Earth + Message = Letter
Letter + Sunflower = A
Earth + Water = Plant
A + Plant = Apple
Apple + Eye = I
Earth + Plant = Tree
I + Tree = It
Letter + Letter = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Tree + Water = River
River + Tree = Paper
Paper + Plant = Book
Book + Phrase = Quote
Plant + Wind = Dandelion
Dandelion + Dandelion = Dandelion Patch
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Earth = Tire
Dandelion Patch + Tire = Flat Tire
Earth + Flat Tire = Puncture
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Water = Whale
Dust + Whale = Sperm
Puncture + Sperm = Punctuation
Punctuation + Quote = Apostrophe
Apostrophe + It = It’s
It + Quote = Quotation
It’s + Quotation = Quotation Marks
Car + Car = Truck
Plant + Smoke = Incense
Incense + Smoke = Prayer
Incense + Prayer = Angel
Angel + Truck = UPS
UPS + UPS = Up
It + Up = Put
A + Punctuation = Ampersand
Ampersand + Put = & Put
A + Fire = B
& Put + B = Putin
Putin + Quotation Marks = Putin Quotes
Putin Quotes + Quotation = Putin Quotation
Putin Quotation + Quotation Marks = Putin Quotation Marks
Apostrophe + UPS = Apostrophe S
& Put + Apostrophe S = Puts
Fire + Prayer = Candle
Candle + Plant = Oxygen
Oxygen + Water = Hydrogen
Dandelion + Hydrogen = Helium
Dust + Engine = Vacuum
Smoke + Vacuum = Clean
Clean + Helium = He
He + He = She
Sperm + Water = Baby
Baby + She = Mother
He + Mother = Them
Puts + Them = Put Them
Ampersand + Apostrophe = At
Dandelion + Water = Wine
Dust + Wine = Vinegar
Earth + Vinegar = Salt
Dust + Water = Mud
Fire + Mud = Brick
Brick + Salt = Mortar
Engine + Engine = Rocket
Rocket + Water = Ship
Fire + Ship = Cannon
Cannon + Mortar = Howitzer
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Lake + Plant = Lily
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Howitzer + Not = How
At + How = That
Put Them + That = Put That
That + That = This
Put That + This = Put This
Put This + Putin Quotation Marks = Put This In Quotation Marks
Put This In Quotation Marks + Puts = Puts This In Quotation Marks
Puts This In Quotation Marks + Quotation Marks = “”
Plant + Steam = Tea
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Rocket + Wind = Kite
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.a + .d = .e
.e + “” = “e”
“e” + “e” = “ee”
Lens + Water = Microscope
Earth + Microscope = Bacteria
Glass + Wind = Window
Wind + Window = Curtain
Curtain + Smoke = Magic
Magic + Smoke = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Colon + Opposite = Semicolon
Wind + Wind = Tornado
Tornado + Tornado = Hurricane
Hurricane + Semicolon = Hurricane;
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
Earth + Fire = Lava
Lava + Water = Stone
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
Dandelion + Plant = Weed
Smoke + Sun = Eclipse
Eclipse + Smoke = Vampire
Vampire + Weed = Count
Count + Count = Number
Weed + Wine = Hangover
Hangover + Number = 1
1 + Count = Two
Negative + Two = -2
-2 + Sign = -
- + Quotation Marks = "
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Brick + Mud = Adobe
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Steam Engine + Wind = Airplane
Airplane + Fire = Crash
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
.b + .e = .f
.e + .f = .g
.g + _ = _g
" + _g = _g.split("");
Hurricane; + _g.split(""); = " ";
Engine + Steam = Train
Train + Wind = Zephyr
Earth + River = Delta
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Wind + X = Y
Upsilon + Y = U
" "; + U = "U"
Earth + Obsidian = Diamond
Pyramid + Water = Tomb
Diamond + Tomb = Tomb Raider
Fire + Sun = Solar
Planet + Solar = System
Fire + System = Computer
Computer + Fire = Hack
Hack + Tomb Raider = Hack and Slash
Sand + Water = Beach
Beach + Sun = Vacation
Mountain + Vacation = Retreat
Engine + Retreat = Reverse
Hack and Slash + Reverse = Backslash
Backslash + _ = \\
Puts This In Quotation Marks + \\ = “\\”
"U" + “\\” = “u\\”
Reverse + “u\\” = “n”
“ee” + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Lily + Water = Pond
Pond + Wine = Punch
Not + Punch = Hug
Hug + Not = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
C” + Semicolon = “;”
.c + “;” = “c”
“c” + “c” = “cc”
.a + “;” = “a;”
.a + “a;” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Earth + Punctuation = Period
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Fire + Vacuum = Black Hole
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Acronym' 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Wind = Kite
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Earth = Hole
Hole + Kite = Pocket
Pocket + Pocket = Pants
Pants + Pants = Shorts
Dust + Fire = Ash
Ash + Ash = Stone
Steam + Stone = Geysir
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Geysir + Internet = Youtube
Stone + Water = Rock
Water + Water = Lake
Earth + Lake = Swamp
Swamp + Swamp = Bog
Bog + Rock = Peat
Peat + Peat = Peat Bog
Earth + Earth = Mountain
Mountain + Mountain = Mountain Range
Mountain Range + Peat Bog = Moor
Earth + Water = Plant
Engine + Plant = Car
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Fire + Swamp = Dragon
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Moor + Not = More
More + Youtube = Youtube Red
Youtube + Youtube Red = Youtube Premium
Shorts + Youtube Premium = Youtube Shorts
Ocean + Water = Fish
Fish + Rocket = Space Fish
Engine + Wind = Windmill
Space Fish + Windmill = Wind Fish
Dust + Earth = Planet
Earth + Planet = Moon
Moon + Wind Fish = Link
Link + Youtube Shorts = Link Shorts
Planet + Planet = Star
Star + Wind = Comet
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Swamp = Money
Comet + Money = Bitcoin
Bitcoin + Link Shorts = Bitly
Bitly + Link = Short
Earth + River = Delta
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Ton = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Wind = Kite
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Earth = Hole
Hole + Kite = Pocket
Pocket + Pocket = Pants
Pants + Pants = Shorts
Earth + Fire = Lava
Lava + Water = Stone
Steam + Stone = Geysir
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Geysir + Internet = Youtube
Stone + Water = Rock
Water + Water = Lake
Earth + Lake = Swamp
Swamp + Swamp = Bog
Bog + Rock = Peat
Peat + Peat = Peat Bog
Earth + Earth = Mountain
Mountain + Mountain = Mountain Range
Mountain Range + Peat Bog = Moor
Earth + Water = Plant
Engine + Plant = Car
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Fire + Swamp = Dragon
Lake + Plant = Lily
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Moor + Not = More
More + Youtube = Youtube Red
Youtube + Youtube Red = Youtube Premium
Shorts + Youtube Premium = Youtube Shorts
Ocean + Water = Fish
Fish + Rocket = Space Fish
Engine + Wind = Windmill
Space Fish + Windmill = Wind Fish
Dust + Earth = Planet
Earth + Planet = Moon
Moon + Wind Fish = Link
Link + Youtube Shorts = Link Shorts
Planet + Planet = Star
Star + Wind = Comet
Plant + Wind = Dandelion
Earth + Plant = Tree
Dandelion + Tree = Wish
Tree + Wish = Money
Comet + Money = Bitcoin
Bitcoin + Link Shorts = Bitly
Bitly + Link = Short
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym
Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Mountain + Sand = Pyramid
Lens + Pyramid = Eye
Dandelion + Plant = Weed
Fire + Moon = Eclipse
Fire + Wind = Smoke
Eclipse + Smoke = Vampire
Vampire + Weed = Count
Count + Count = Number
Dandelion + Water = Wine
Weed + Wine = Hangover
Hangover + Number = 1
1 + Alphabet = A
A + Plant = Apple
Apple + Eye = I
I + Tree = It
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Apostrophe + It = It’s
It + Quote = Quotation
It’s + Quotation = Quotation Marks
Car + Car = Truck
Plant + Smoke = Incense
Incense + Smoke = Prayer
Incense + Prayer = Angel
Angel + Truck = UPS
UPS + UPS = Up
It + Up = Put
A + Punctuation = Ampersand
Ampersand + Put = & Put
A + Fire = B
& Put + B = Putin
Putin + Quotation Marks = Putin Quotes
Putin Quotes + Quotation = Putin Quotation
Putin Quotation + Quotation Marks = Putin Quotation Marks
Apostrophe + UPS = Apostrophe S
& Put + Apostrophe S = Puts
Fire + Prayer = Candle
Candle + Plant = Oxygen
Oxygen + Water = Hydrogen
Dandelion + Hydrogen = Helium
Smoke + Vacuum = Clean
Clean + Helium = He
He + He = She
He + She = Baby
Baby + She = Mother
He + Mother = Them
Puts + Them = Put Them
Ampersand + Apostrophe = At
Dust + Wine = Vinegar
Earth + Vinegar = Salt
Dust + Water = Mud
Fire + Mud = Brick
Brick + Salt = Mortar
Rocket + Water = Ship
Fire + Ship = Cannon
Cannon + Mortar = Howitzer
Howitzer + Not = How
At + How = That
Put Them + That = Put That
That + That = This
Put That + This = Put This
Put This + Putin Quotation Marks = Put This In Quotation Marks
Put This In Quotation Marks + Puts = Puts This In Quotation Marks
Puts This In Quotation Marks + Quotation Marks = “”
Plant + Steam = Tea
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Fire + Planet = Sun
Sun + Wind = Sunflower
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.a + .d = .e
.e + “” = “e”
“e” + “e” = “ee”
Lens + Water = Microscope
Earth + Microscope = Bacteria
Money + Wish = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Colon + Opposite = Semicolon
Wind + Wind = Tornado
Tornado + Tornado = Hurricane
Hurricane + Semicolon = Hurricane;
Glass + Wind = Window
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
1 + Count = Two
Negative + Two = -2
-2 + Sign = -
- + Quotation Marks = "
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Brick + Mud = Adobe
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Steam Engine + Wind = Airplane
Airplane + Fire = Crash
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
.b + .e = .f
.e + .f = .g
.g + _ = _g
" + _g = _g.split("");
Hurricane; + _g.split(""); = " ";
Engine + Steam = Train
Train + Wind = Zephyr
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Wind + X = Y
Upsilon + Y = U
" "; + U = "U"
Earth + Obsidian = Diamond
Pyramid + Water = Tomb
Diamond + Tomb = Tomb Raider
Fire + Sun = Solar
Planet + Solar = System
Fire + System = Computer
Computer + Fire = Hack
Hack + Tomb Raider = Hack and Slash
Sand + Water = Beach
Beach + Sun = Vacation
Mountain + Vacation = Retreat
Engine + Retreat = Reverse
Hack and Slash + Reverse = Backslash
Backslash + _ = \\
Puts This In Quotation Marks + \\ = “\\”
"U" + “\\” = “u\\”
Reverse + “u\\” = “n”
“ee” + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Lily + Water = Pond
Pond + Wine = Punch
Not + Punch = Hug
Hug + Not = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
C” + Semicolon = “;”
.c + “;” = “c”
“c” + “c” = “cc”
.a + “;” = “a;”
.a + “a;” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Earth + Punctuation = Period
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Plural' 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Earth + Water = Plant
Engine + Plant = Car
Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Paper = Book
Book + Delta = Alphabet
Earth + Wind = Dust
Dust + Earth = Planet
Fire + Planet = Sun
Sun + Wind = Sunflower
Fire + Wind = Smoke
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Earth + Message = Letter
Letter + Letter = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Book + Quote = Bible
Alphabet + Bible = Abc
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Apostrophe + River = Possessive
Abc + Possessive = Abc's
Abc's + Quote = "A"
Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Dust + Fire = Ash
Ash + Ash = Stone
Sand + Stone = Pyramid
Lens + Pyramid = Eye
"A" + Eye = "I"
"I" + "I" = "ii"
Sand + Wind = Dune
Dune + Planet = Tatooine
Dune + Tatooine = Star Wars
Fire + Water = Steam
Steam + Stone = Geysir
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Internet + Star Wars = 4Chan
Geysir + Steam = Hot Spring
4Chan + Hot Spring = /a/
Water + Water = Lake
Lake + Plant = Lily
Plant + Steam = Tea
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Rocket + Wind = Kite
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Glass + Water = Wine
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.a + .d = .e
.e + /a/ = /e/
"ii" + /e/ = "ee"
"I" + "ee" = "e"
Letter + Sunflower = A
A + Fire = B
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
Punctuation + Wind = Comma
Earth + Punctuation = Period
Comma + Period = Semicolon
C” + Semicolon = “;”
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Car + Car = Truck
Water + Wine = Holy Water
Holy Water + Wind = Angel
Angel + Truck = UPS
Engine + Steam = Train
Train + Wind = Zephyr
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Wind + X = Y
Upsilon + Y = U
File Extension + U = .U
.U + Not = .n
.n + “;” = “n”
"e" + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Dust + Plant = Pollen
Pollen + Water = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
.c + “;” = “c”
“c” + “c” = “cc”
"A" + “cc” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Glass + Wind = Window
Lily + Window = Monocle
Fire + Wine = Alcohol
Alcohol + Wind = Hangover
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Plant + Wind = Dandelion
Fire + Wind = Smoke
Smoke + Water = Fog
Dandelion + Fog = Fairy
Earth + Fairy = Gnome
Earth + Gnome = Dwarf
Fire + Water = Steam
Earth + Steam = Mud
Fire + Mud = Brick
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Earth + Fire = Lava
Lava + Water = Stone
Stone + Stone = Boulder
Boulder + Water = Waterfall
Steamboat + Waterfall = Niagara Falls
Water + Wind = Wave
Water + Wave = Tsunami
Fire + Fire = Volcano
Tsunami + Volcano = Earthquake
Earthquake + Gnome = Goblin
Earthquake + Goblin = Troll
Troll + Water = Bridge
Bridge + Niagara Falls = Honeymoon
Dwarf + Honeymoon = Short
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Paper = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Ton = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Earth + Water = Plant
Plant + Wind = Dandelion
Fire + Wind = Smoke
Smoke + Water = Fog
Dandelion + Fog = Fairy
Earth + Fairy = Gnome
Earth + Gnome = Dwarf
Earth + Wind = Dust
Dust + Water = Mud
Fire + Mud = Brick
Fire + Water = Steam
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Earth + Fire = Lava
Lava + Water = Stone
Stone + Stone = Boulder
Boulder + Water = Waterfall
Steamboat + Waterfall = Niagara Falls
Water + Wind = Wave
Water + Wave = Tsunami
Fire + Fire = Volcano
Tsunami + Volcano = Earthquake
Earthquake + Gnome = Goblin
Earthquake + Goblin = Troll
Troll + Water = Bridge
Bridge + Niagara Falls = Honeymoon
Dwarf + Honeymoon = Short
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Paper = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym
Dust + Earth = Planet
Fire + Planet = Sun
Sun + Wind = Sunflower
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Earth + Message = Letter
Letter + Letter = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Book + Quote = Bible
Alphabet + Bible = Abc
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Apostrophe + River = Possessive
Abc + Possessive = Abc's
Abc's + Quote = "A"
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Sand + Stone = Pyramid
Lens + Pyramid = Eye
"A" + Eye = "I"
"I" + "I" = "ii"
Sand + Wind = Dune
Dune + Planet = Tatooine
Dune + Tatooine = Star Wars
Steam + Stone = Geysir
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Internet + Star Wars = 4Chan
Geysir + Steam = Hot Spring
4Chan + Hot Spring = /a/
Water + Water = Lake
Lake + Plant = Lily
Plant + Steam = Tea
Earth + Tsunami = Island
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Rocket + Wind = Kite
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Dandelion + Water = Wine
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.a + .d = .e
.e + /a/ = /e/
"ii" + /e/ = "ee"
"I" + "ee" = "e"
Letter + Sunflower = A
A + Fire = B
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
Punctuation + Wind = Comma
Earth + Punctuation = Period
Comma + Period = Semicolon
C” + Semicolon = “;”
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Fire + Gnome = Dragon
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Car + Car = Truck
Water + Wine = Holy Water
Holy Water + Wind = Angel
Angel + Truck = UPS
Engine + Steam = Train
Train + Wind = Zephyr
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Wind + X = Y
Upsilon + Y = U
File Extension + U = .U
.U + Not = .n
.n + “;” = “n”
"e" + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Dust + Plant = Pollen
Pollen + Water = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
.c + “;” = “c”
“c” + “c” = “cc”
"A" + “cc” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Glass + Wind = Window
Lily + Window = Monocle
Fire + Wine = Alcohol
Alcohol + Wind = Hangover
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Plural' 2`] = `
"Earth + Earth = Mountain
Mountain + Wind = Avalanche
Avalanche + Wind = Snow
Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Surf + Surf = Ocean
Earth + Ocean = Island
Island + Island = Continent
Continent + Surf = Australia
Australia + Snow = No
No + Ocean = Not
Earth + Wind = Dust
Fire + Steam = Engine
Dust + Engine = Vacuum
Vacuum + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Wind = Dust
Dust + Dust = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Fire + Lens = Magnifying Glass
Dust + Fire = Ash
Ash + Glass = Vase
Magnifying Glass + Vase = Evidence
Evidence + Magnifying Glass = Detective"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Surf + Wind = Surfing
Earth + Fire = Lava
Lava + Water = Stone
Stone + Surfing = Skimming
Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Paper = Book
Book + Skimming = Summary
Earth + River = Delta
Book + Delta = Alphabet
Alphabet + Summary = Abbreviation
Abbreviation + Abbreviation = Acronym"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Earth = Mountain
Mountain + Wind = Avalanche
Avalanche + Earth = Landslide
Earth + Water = Plant
Earth + Plant = Tree
Landslide + Tree = Log
Earth + Wind = Dust
Dust + Water = Mud
Fire + Mud = Brick
Brick + Brick = Wall
Wall + Water = Dam
Dust + Earth = Planet
Brick + Planet = Mars
Mars + Wall = War
Dam + War = Armageddon
Armageddon + Log = Arm
Arm + Arm = Body
Earth + Mars = Life
Body + Life = Soul"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Wind = Dust
Dust + Water = Mud
Fire + Mud = Brick
Brick + Water = Glass
Glass + Wind = Window
Fire + Window = Fireplace
Earth + Water = Plant
Earth + Plant = Tree
Fireplace + Tree = Log
Brick + Brick = Wall
Wall + Water = Dam
Dust + Earth = Planet
Brick + Planet = Mars
Mars + Wall = War
Dam + War = Armageddon
Armageddon + Log = Arm
Arm + Arm = Body
Earth + Mars = Life
Body + Life = Soul
Dust + Plant = Pollen
Pollen + Wind = Allergy
Allergy + Allergy = Sneeze
Earth + Fire = Lava
Lava + Water = Stone
Sneeze + Stone = Snot
Fire + Fireplace = Warmth
Warmth + Wind = Hot Air
Hot Air + Mud = Politician
Politician + Snot = Not
Planet + Planet = Star
Wind + Wind = Tornado
Star + Tornado = Black Hole
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Water + Wind = Wave
Fire + Water = Steam
Steam + Wave = Surf
Surf + Wind = Surfing
Earth + Fire = Lava
Lava + Water = Stone
Stone + Surfing = Skimming
Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Paper = Book
Book + Skimming = Summary
Earth + River = Delta
Book + Delta = Alphabet
Alphabet + Summary = Abbreviation
Abbreviation + Abbreviation = Acronym
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Fire + Lens = Magnifying Glass
Earth + Wind = Dust
Dust + Water = Mud
Mud + Mud = Clay
Clay + Glass = Vase
Magnifying Glass + Vase = Evidence
Evidence + Magnifying Glass = Detective
Earth + Earth = Mountain
Mountain + Wind = Avalanche
Avalanche + Wind = Snow
Surf + Surf = Ocean
Earth + Ocean = Island
Island + Island = Continent
Continent + Surf = Australia
Australia + Snow = No
No + Ocean = Not
Fire + Steam = Engine
Dust + Engine = Vacuum
Vacuum + Vacuum = Black Hole
Black Hole + River = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Plural' 1`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Earth + Water = Plant
Engine + Plant = Car
Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural"
`;
